tests/samples/negative/generics/method_explicit_non_generic.ax
module method_explicit_non_generic;

struct Box {
    value: i32;
}

impl Box {
    fn read(self: &Box) -> i32 {
        return self.value;
    }
}

fn main() -> i32 {
    let box: Box = Box { value: 1 };
    return box.read[i32]();
}
